--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 <body>
   <h1>记仇表情包生成器😛</h1>
   <div class="container">
-    <div>↑点文字可以修改；长按可保存↓</div>
+    <div>点文字可以修改；长按可保存</div>
     <div id="content-box">
       <!-- <div class="img-box"> -->
       <img id="image" style="width:100%" src="jichou.png" alt="记仇">
@@ -147,8 +147,6 @@
     </div>
   </div>
   <div class="footer">
-      <a href="https://github.com/MLuminary">ZHUSHAOKUN</a>
-      <a>修改自</a><a href="https://github.com/MLuminary/subentry" target="_blank">Github</a>
       <p>&#169; ZHUSHAOKUN</p>
   </div>
   <script src="html2canvas.js"></script>
