--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <div class="row clearfloat">
       
       <a id="btn">生成</a>
-      <a class="upload">上传</a>
+      <a class="upload">改图</a>
       <button id="randomTextBtn">随机文案</button>
 
       <input type="file" id="imageChange">
