--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 <body>
   <h1>记仇表情包生成器😛</h1>
   <div class="container">
-    <div>点文字可以修改；长按可保存</div>
+    <div align="center">点文字可以修改；长按可保存</div>
     <div id="content-box">
       <!-- <div class="img-box"> -->
       <img id="image" style="width:100%" src="jichou.png" alt="记仇">
