--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 <body>
   <h1>记仇表情包生成器😛</h1>
   <div class="container">
-    <div align="center">点文字可以修改；长按可保存</div>
+    <div align="center">|点文字可以修改；长按可保存|</div>
     <div id="content-box">
       <!-- <div class="img-box"> -->
       <img id="image" style="width:100%" src="jichou.png" alt="记仇">
@@ -188,7 +188,7 @@
     '晴，我的心就跟破碎了一样，从昨天到今天没吃饭，又冷又饿，一直等朋友圈的人带我玩，一直等到现在都不带我！',
     '晴，今天要热土我了，没人给我买雪糕，这个仇记下了！',
     '今天群里好多兄弟都有男朋友了，只有我还喜欢女孩子，因为我觉得女孩子软软的想象的，我觉得我跟这群gay玩不下去。',
-    '晴，有人要记仇表情包，这个仇，我先记下了！'
+    '晴，有人要记仇表情包，这个仇，我先记下了！',
     ];
 
     var btn_random = document.getElementById('randomTextBtn');
