--- a/index.html
+++ b/index.html
@@ -112,16 +112,19 @@
       margin-top: 20px;
     }
     h1 {
-        margin: 10px;
-
-      text-align:center;}
+      margin: 10px;
+      text-align:center;
+    }
+    a {
+        text-decoration: none;
+    }
   </style>
 </head>
 
 <body>
   <h1>记仇表情包生成器😛</h1>
   <div class="container">
-    <div align="center">|点文字可以修改；长按可保存|</div>
+    <div align="center">点文字可以修改；长按可保存</div>
     <div id="content-box">
       <!-- <div class="img-box"> -->
       <img id="image" style="width:100%" src="jichou.png" alt="记仇">
@@ -147,7 +150,7 @@
     </div>
   </div>
   <div class="footer">
-      <p>&#169; ZHUSHAOKUN</p>
+      <a href="https://xiaokunierse.github.io/Soulfolio/">&#169; ZHUSHAOKUN</a>
   </div>
   <script src="html2canvas.js"></script>
   <script>
